--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "industryhack",
     "version": "0.0.1",
     "scripts": {
-        "start": "iojs --harmony_arrow_functions app.js"
+        "start": "iojs --harmony_arrow_functions service/app.js"
     },
     "dependencies": {
         "express": "^4.12.4"
